# Artist-Bot

./: README.md  keep_alive.py  main.py  pyproject.toml
cogs/: error.py  game.py  moderation.py  thread.py
database/: rps.db
templates/: index.html
