[tool.poetry]
name = "repl_python3_Artist-Bot"
version = "0.1.0"
description = ""
authors = ["AyushAfre <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
discord= { git = "ssh://git@github.com:ironman9356/discord.py.git", branch = "master" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
